[gd_scene load_steps=24 format=3 uid="uid://vh257mladysl"]

[ext_resource type="Script" path="res://scenes/characters/Sonny/Sonny.gd" id="1_hk164"]
[ext_resource type="Texture2D" uid="uid://baeqsu8b6wnx8" path="res://assets/GrassHops Asset Pack/characters/sonny.png" id="2_aw34o"]
[ext_resource type="Script" path="res://scenes/characters/Sonny/AnimationPlayer.gd" id="3_umlbm"]

[sub_resource type="Animation" id="Animation_dyx6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="Animation" id="Animation_1wts6"]
resource_name = "attack_down"
length = 0.36
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [117, 118, 119, 120, 121, 122, 123]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.153, 0.273),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"attack_thrust"
}, {
"args": [2],
"method": &"activate_weapon_hitbox"
}, {
"args": [2],
"method": &"deactivate_weapon_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_5aoot"]
resource_name = "attack_down_special"
length = 1.212
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 143, 132]
}

[sub_resource type="Animation" id="Animation_gno6k"]
resource_name = "attack_up_1"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [156, 157, 158, 159, 160, 161, 162, 163, 164, 165]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack_thrust"
}, {
"args": [0],
"method": &"deactivate_weapon_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_7kq74"]
resource_name = "dash_down"
length = 0.55
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.11, 0.16, 0.23, 0.29, 0.33, 0.38, 0.43, 0.46, 0.5, 0.52),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.55),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [2],
"method": &"dash_thrust"
}, {
"args": [],
"method": &"no_longer_dashing"
}]
}

[sub_resource type="Animation" id="Animation_b1vmk"]
resource_name = "idle"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [104, 105, 106, 107, 108, 109]
}

[sub_resource type="Animation" id="Animation_r2xv8"]
resource_name = "left_side_attack"
length = 0.49
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [65, 66, 67, 68, 69, 70, 71, 72, 74]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.15, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"attack_thrust"
}, {
"args": [3],
"method": &"deactivate_weapon_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_rxstf"]
resource_name = "left_side_idle"
length = 1.0125
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55, 56, 57, 58, 59, 60]
}

[sub_resource type="Animation" id="Animation_40prl"]
resource_name = "left_side_running"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_5lvab"]
resource_name = "right_side_attack"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [91, 92, 93, 94, 95, 96, 97, 98, 99, 100]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.34, 0.39, 0.43),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"attack_thrust"
}, {
"args": [],
"method": &"activate_extra_hitbox"
}, {
"args": [1],
"method": &"deactivate_weapon_hitbox"
}, {
"args": [],
"method": &"deactivate_extra_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_w47xj"]
resource_name = "right_side_idle"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.65, 0.8, 0.95, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [78, 79, 80, 81, 82, 83, 84, 85, 86, 87]
}

[sub_resource type="Animation" id="Animation_xqibe"]
resource_name = "right_side_running"
length = 0.83
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [143, 144, 145, 146, 147, 148, 149, 150]
}

[sub_resource type="Animation" id="Animation_byyhq"]
resource_name = "running_front"
length = 0.61
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_80x4g"]
resource_name = "running_upwards"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [27, 28, 29, 30, 31, 32, 34]
}

[sub_resource type="Animation" id="Animation_qncki"]
resource_name = "upwards_idle"
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42, 43, 44, 45]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hq4v6"]
_data = {
"RESET": SubResource("Animation_dyx6u"),
"attack_down": SubResource("Animation_1wts6"),
"attack_down_special": SubResource("Animation_5aoot"),
"attack_up_1": SubResource("Animation_gno6k"),
"dash_down": SubResource("Animation_7kq74"),
"idle": SubResource("Animation_b1vmk"),
"left_side_attack": SubResource("Animation_r2xv8"),
"left_side_idle": SubResource("Animation_rxstf"),
"left_side_running": SubResource("Animation_40prl"),
"right_side_attack": SubResource("Animation_5lvab"),
"right_side_idle": SubResource("Animation_w47xj"),
"right_side_running": SubResource("Animation_xqibe"),
"running_front": SubResource("Animation_byyhq"),
"running_upwards": SubResource("Animation_80x4g"),
"upwards_idle": SubResource("Animation_qncki")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t0mlk"]
radius = 4.0
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ltlo"]
size = Vector2(35.1389, 20.5556)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojh7q"]
size = Vector2(77.75, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuylp"]
size = Vector2(18, 13)

[node name="Sonny" type="CharacterBody2D"]
z_index = 10
z_as_relative = false
scale = Vector2(2, 2)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_hk164")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -17.62)
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 0.666667)
texture = ExtResource("2_aw34o")
hframes = 13
vframes = 14
frame = 60

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_hq4v6")
}
script = ExtResource("3_umlbm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 10
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_t0mlk")

[node name="Sword_Hitbox_Detector" type="Area2D" parent="."]
z_index = 10
z_as_relative = false
collision_layer = 4
collision_mask = 4

[node name="Sword_Hitbox_Downwards" type="CollisionShape2D" parent="Sword_Hitbox_Detector"]
light_mask = 5
visibility_layer = 5
position = Vector2(0.763895, 14.1667)
shape = SubResource("RectangleShape2D_3ltlo")
disabled = true

[node name="Sword_Hitbox_Up" type="CollisionShape2D" parent="Sword_Hitbox_Detector"]
light_mask = 5
visibility_layer = 5
position = Vector2(0, -19.5)
shape = SubResource("RectangleShape2D_ojh7q")
disabled = true

[node name="Sword_Hitbox_Left" type="CollisionShape2D" parent="Sword_Hitbox_Detector"]
light_mask = 5
visibility_layer = 5
position = Vector2(-22, 6.5)
rotation = 1.57079
shape = SubResource("RectangleShape2D_3ltlo")
disabled = true

[node name="Sword_Hitbox_Right" type="CollisionShape2D" parent="Sword_Hitbox_Detector"]
light_mask = 5
visibility_layer = 5
position = Vector2(21.5, -9)
rotation = 1.57079
shape = SubResource("RectangleShape2D_3ltlo")
disabled = true

[node name="Sword_Hitbox_Right_Two" type="CollisionShape2D" parent="Sword_Hitbox_Detector"]
position = Vector2(19.5, 11)
rotation = 1.57079
shape = SubResource("RectangleShape2D_xuylp")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Sword_Hitbox_Detector" to="." method="_on_sword_hitbox_detector_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
